# touchstone-runner

./: .gitignore  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  CMakeSettings.json  OCVScreenShot.cpp  OCVScreenShot.hpp  d3dHelper.hpp  main.cpp
